docs: canonical engine documentation, and the skills that operate it
Eight documents describe the engine as it is -- layers and dependency direction, execution
and lowering, the stable surface, ownership and concurrency, families and backends,
verification, and development. They carry the load-bearing constraints in current tense:
compile once and execute many, fixed binding identity, backend-owned lowering,
materialization ownership, no silent fallback, the lifecycle rules and the verification
policy.

The skills cover building TornadoVM and this project for either JDK line, profiling with
nsys and ncu, updating the two integrations, and porting a new model architecture. Each says
what counts as proof: a resolved backend, a real execution path, and correct output --
because a process that exits zero at a plausible throughput has established none of them.